--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>鳳山高中校友會</title>
     <link rel="icon" href="img/fssh_logo.gif" type="image/x-icon">
     <!--General CSS-->
-    <!--link(href="css/tocas.css" rel="stylesheet")-->
     <link href="css/NotoSansTC400ChineseTraditional.css" rel="stylesheet">
     <link href="css/all.css" rel="stylesheet">
-    <!--link(href="css/bulma.min.css" rel="stylesheet")-->
     <link href="css/bulma.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <!--General JavaScript-->
     <script src="js/jquery-3.4.1.js"></script>
     <!--CSS-->
@@ -76,18 +75,14 @@
         <div class="container">
           <div class="columns is-vcentered">
             <div class="column is-half">
-              <div class="columns is-centered">
-                <p class="title">現任理事長&nbsp;&nbsp;&nbsp;張萬邦</p>
-              </div>
-              <div class="columns is-centered">
-                <div class="content is-medium">
-                  <ul>
-                    <li>鳳中校友會第三屆理事長</li>
-                    <li>民國00年高中部畢業</li>
-                    <li>00學年度鳳中第0屆傑出校友</li>
-                    <li>現職：</li>
-                  </ul>
-                </div>
+              <p class="title">現任理事長&nbsp;&nbsp;&nbsp;張萬邦</p>
+              <div class="content is-medium" style="margin:0 auto;">
+                <ul>
+                  <li>鳳中校友會第三屆理事長</li>
+                  <li>民國00年高中部畢業</li>
+                  <li>00學年度鳳中第0屆傑出校友</li>
+                  <li>現職：</li>
+                </ul>
               </div>
             </div>
             <div class="column is-half"><img class="image is-rounded" src="img/default_man.png" style="margin:auto;" width="400"></div>
@@ -102,5 +97,22 @@
         </div>
       </div>
     </section>
+    <!--Footer-->
+    <footer class="footer has-text-white">
+      <div class="content has-text-centered">
+        <div class="columns is-multiline">
+          <div class="column is-one-third">
+            <p><i class="fas fa-phone"></i> 電話：07-746-3150</p>
+          </div>
+          <div class="column is-one-third">
+            <p><i class="fas fa-map-marker-alt"></i> 地址：83067 高雄市鳳山區光復路二段130號</p>
+          </div>
+          <div class="column is-one-third">
+            <p>Designed by Sz-Wei Chen</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--Footer-->
   </body>
 </html>
