--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
   <body>
     <!--Menu-->
     <nav class="navbar is-primary is-fixed-top">
-      <div class="navbar-brand"><a class="navbar-item" href="">
-          <h1 class="title is-4 has-text-white">    鳳山高中校友會</h1></a><a class="navbar-burger burger" data-target="navbarMenu"><span></span><span></span><span></span></a></div>
+      <div class="navbar-brand"><a class="navbar-item" href="index.html">
+          <h1 class="title is-4 has-text-white">鳳山高中校友會</h1></a><a class="navbar-burger burger" data-target="navbarMenu"><span></span><span></span><span></span></a></div>
       <div class="navbar-menu" id="navbarMenu">
         <div class="navbar-end">
           <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">關於我們</a>
-            <div class="navbar-dropdown"><a class="navbar-item" href="#about">簡介</a><a class="navbar-item" href="#chairman">現任理事長</a><a class="navbar-item" href="#staff">工作團隊</a></div>
+            <div class="navbar-dropdown"><a class="navbar-item" href="index.html#about">簡介</a><a class="navbar-item" href="index.html#chairman">現任理事長</a><a class="navbar-item" href="index.html#staff">工作團隊</a></div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">歷屆理監事</a>
-            <div class="navbar-dropdown"><a class="navbar-item" href="">第三屆(現任)</a><a class="navbar-item" href="">第二屆</a><a class="navbar-item" href="">第一屆</a></div>
+            <div class="navbar-dropdown"><a class="navbar-item" href="his_staff.html#his_staff_3">第三屆(現任)</a><a class="navbar-item" href="his_staff.html#his_staff_2">第二屆</a><a class="navbar-item" href="his_staff.html#his_staff_1">第一屆</a></div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">歷屆傑出校友</a>
             <div class="navbar-dropdown"><a class="navbar-item" href="">第1屆</a><a class="navbar-item" href="">第2屆</a><a class="navbar-item" href="">第3屆</a><a class="navbar-item" href="">第4屆</a><a class="navbar-item" href="">第5屆</a><a class="navbar-item" href="">第6屆</a><a class="navbar-item" href="">第7屆</a><a class="navbar-item" href="">第8屆</a><a class="navbar-item" href="">第9屆</a><a class="navbar-item" href="">第10屆</a><a class="navbar-item" href="">第11屆</a><a class="navbar-item" href="">第12屆</a><a class="navbar-item" href="">第13屆</a><a class="navbar-item" href="">第14屆</a><a class="navbar-item" href="">第15屆</a><a class="navbar-item" href="">第16屆</a><a class="navbar-item" href="">第17屆</a><a class="navbar-item" href="">第18屆</a>
