--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="navbar-dropdown"><a class="navbar-item" href="his_staff.html#his_staff_3">第三屆(現任)</a><a class="navbar-item" href="his_staff.html#his_staff_2">第二屆</a><a class="navbar-item" href="his_staff.html#his_staff_1">第一屆</a></div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">歷屆傑出校友</a>
-            <div class="navbar-dropdown"><a class="navbar-item" href="">第1屆</a><a class="navbar-item" href="">第2屆</a><a class="navbar-item" href="">第3屆</a><a class="navbar-item" href="">第4屆</a><a class="navbar-item" href="">第5屆</a><a class="navbar-item" href="">第6屆</a><a class="navbar-item" href="">第7屆</a><a class="navbar-item" href="">第8屆</a><a class="navbar-item" href="">第9屆</a><a class="navbar-item" href="">第10屆</a><a class="navbar-item" href="">第11屆</a><a class="navbar-item" href="">第12屆</a><a class="navbar-item" href="">第13屆</a><a class="navbar-item" href="">第14屆</a><a class="navbar-item" href="">第15屆</a><a class="navbar-item" href="">第16屆</a><a class="navbar-item" href="">第17屆</a><a class="navbar-item" href="">第18屆</a>
+            <div class="navbar-dropdown"><a class="navbar-item" href="doc/alumni_list/17th.pdf">第17屆</a><a class="navbar-item" href="doc/alumni_list/16th.pdf">第16屆</a><a class="navbar-item" href="doc/alumni_list/15th.pdf">第15屆</a><a class="navbar-item" href="doc/alumni_list/14th.pdf">第14屆</a><a class="navbar-item" href="doc/alumni_list/13th.pdf">第13屆</a><a class="navbar-item" href="doc/alumni_list/12th.pdf">第12屆</a><a class="navbar-item" href="doc/alumni_list/11th.pdf">第11屆</a><a class="navbar-item" href="doc/alumni_list/10th.pdf">第10屆</a><a class="navbar-item" href="doc/alumni_list/9th.pdf">第9屆</a><a class="navbar-item" href="doc/alumni_list/8th.pdf">第8屆</a><a class="navbar-item" href="doc/alumni_list/7th.pdf">第7屆</a><a class="navbar-item" href="doc/alumni_list/6th.pdf">第6屆</a><a class="navbar-item" href="doc/alumni_list/5th.pdf">第5屆</a><a class="navbar-item" href="doc/alumni_list/4th.pdf">第4屆</a><a class="navbar-item" href="doc/alumni_list/3th.pdf">第3屆</a><a class="navbar-item" href="doc/alumni_list/2th.pdf">第2屆</a><a class="navbar-item" href="doc/alumni_list/1th.pdf">第1屆</a>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">歷屆大事紀</a>
@@ -40,9 +40,9 @@
           </div>
           <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">活動花絮</a>
             <div class="navbar-dropdown"><a class="navbar-item" href="">2019</a><a class="navbar-item" href="">2018</a></div>
-          </div><a class="navbar-link">影音專區</a>
+          </div><a class="navbar-item">影音專區</a>
           <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">文件下載</a>
-            <div class="navbar-dropdown"><a class="navbar-item" href="">校友會組織章程</a><a class="navbar-item" href="">校友會入會申請書</a><a class="navbar-item" href="">傑出校友選拔表揚辦法</a><a class="navbar-item" href="">傑出校友推薦表</a></div>
+            <div class="navbar-dropdown"><a class="navbar-item" href="doc/downloads/org_regulations.pdf">校友會組織章程</a><a class="navbar-item" href="doc/downloads/application.doc">校友會入會申請書</a><a class="navbar-item" href="doc/downloads/praise.pdf">傑出校友選拔表揚辦法</a><a class="navbar-item" href="doc/downloads/recommendation.doc">傑出校友推薦表</a></div>
           </div>
         </div>
       </div>
