--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
           </div>
           <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">歷屆大事紀</a>
             <div class="navbar-dropdown"><a class="navbar-item" href="">第二屆</a><a class="navbar-item" href="">第一屆</a></div>
-          </div>
-          <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">活動花絮</a>
-            <div class="navbar-dropdown"><a class="navbar-item" href="">2019</a><a class="navbar-item" href="">2018</a></div>
-          </div><a class="navbar-item">影音專區</a>
+          </div><a class="navbar-item">活動花絮</a>
+          <!--.navbar-item.has-dropdown.is-hoverable
+          a.navbar-link 活動花絮
+          .navbar-dropdown
+              a.navbar-item(href="") 2019
+              a.navbar-item(href="") 2018
+          --><a class="navbar-item">影音專區</a>
           <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">文件下載</a>
             <div class="navbar-dropdown"><a class="navbar-item" href="doc/downloads/org_regulations.pdf">校友會組織章程</a><a class="navbar-item" href="doc/downloads/application.doc">校友會入會申請書</a><a class="navbar-item" href="doc/downloads/praise.pdf">傑出校友選拔表揚辦法</a><a class="navbar-item" href="doc/downloads/recommendation.doc">傑出校友推薦表</a></div>
           </div>
