--- a/his_staff.html
+++ b/his_staff.html
@@ -13,10 +13,7 @@
     <link href="css/main.css" rel="stylesheet">
     <!--General JavaScript-->
     <script src="js/jquery-3.4.1.js"></script>
-    <!--CSS-->
-    <link href="css/index.css" rel="stylesheet">
-    <!--JavaScript-->
-    <script src="js/index.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <!--Menu-->
