--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <link href="css/main.css" rel="stylesheet">
     <!--General JavaScript-->
     <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/main.js"></script>
     <!--CSS-->
     <link href="css/index.css" rel="stylesheet">
-    <!--JavaScript-->
-    <script src="js/index.js"></script>
   </head>
   <body>
     <!--Menu-->
