--- a/his_staff.html
+++ b/his_staff.html
@@ -33,7 +33,7 @@
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">歷屆大事紀</a>
-            <div class="navbar-dropdown"><a class="navbar-item" href="">第二屆</a><a class="navbar-item" href="">第一屆</a></div>
+            <div class="navbar-dropdown"><a class="navbar-item" href="his_event_2th.html">第二屆</a><a class="navbar-item" href="his_event_1th.html">第一屆</a></div>
           </div><a class="navbar-item">活動花絮</a>
           <!--.navbar-item.has-dropdown.is-hoverable
           a.navbar-link 活動花絮
