--- a/his_event_1th.html
+++ b/his_event_1th.html
@@ -15,7 +15,8 @@
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/main.js"></script>
     <!--CSS-->
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/bulma-timeline.min.css" rel="stylesheet">
+    <link href="css/his_event.css" rel="stylesheet">
   </head>
   <body>
     <!--Menu-->
@@ -50,52 +51,86 @@
       </div>
     </nav>
     <!--Menu-->
-    <section class="hero is-fullheight" id="header">
+    <section class="hero is-info is-hero-with-navbar" id="his_event_1th">
       <div class="hero-body">
         <div class="container has-text-centered">
-          <p class="title is-spaced has-text-white" style="font-size:4rem;">中華民國鳳山高中校友會</p>
-          <p class="subtitle has-text-white" style="font-size:3rem;">歡迎蒞臨</p>
+          <p class="title is-2 has-text-white">第一屆大事紀</p>
         </div>
       </div>
     </section>
-    <section class="hero is-fullheight-with-navbar is-white" id="about">
-      <div class="hero-body">
-        <div class="container">
-          <div class="columns is-vcentered">
-            <div class="column is-two-fifths"><img class="image" src="img/fssh_logo.gif" style="margin:auto;"></div>
-            <div class="column is-three-fifths has-text-centered">
-              <p class="title">認識鳳中校友會</p>
-              <p class="content"></p>過去多年來，鳳山高中校友會在張雅玲董事長的帶領下，延續鳳中「榮譽、勤勞、誠實」校訓，為校友們情感的聯繫建立了穩固基礎。但為進一步符合內政部全國性人民團體法規，「中華民國鳳山高中校友會」在民國105年，正式申請並通過內政部全國性人民團體立案，正式成為合法人民團體組織。未來在服務鳳中校友、師長及同學們，都能夠在此制度架構下持續的推動。
-              <p class="subtitle" style="margin-top:15px;">創會時間：民國105年7月23日</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="hero is-fullheight-with-navbar is-light" id="chairman">
-      <div class="hero-body">
-        <div class="container">
-          <div class="columns is-vcentered">
-            <div class="column is-half">
-              <p class="title">現任理事長&nbsp;&nbsp;&nbsp;張萬邦</p>
-              <div class="content is-medium" style="margin:0 auto;">
-                <ul>
-                  <li>鳳中校友會第三屆理事長</li>
-                  <li>民國00年高中部畢業</li>
-                  <li>00學年度鳳中第0屆傑出校友</li>
-                  <li>現職：</li>
-                </ul>
+    <section style="margin-top:2rem;">
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <div class="timeline is-centered">
+              <header class="timeline-header"><span class="tag is-large is-primary">2018</span></header>
+              <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                  <p class="heading m-heading">24 MAR 2018</p>
+                  <p>
+                    <li>辦理本屆第 3 次會員大會暨第 7 次理監事聯席會。</li>
+                  </p>
+                </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                  <p class="heading m-heading">22 FEB 2018</p>
+                  <p>
+                    <li>辦理本屆第 6 次理監事聯席會。</li>
+                  </p>
+                </div>
+              </div>
+              <header class="timeline-header"><span class="tag is-large is-primary">2017</span></header>
+              <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                  <p class="heading m-heading">20 DEC 2017</p>
+                  <p>
+                    <li>辦理本屆第 5 次理監事聯席會。</li>
+                  </p>
+                </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                  <p class="heading m-heading">20 JUL 2017</p>
+                  <p>
+                    <li>辦理本屆第 4 次理監事聯席會。</li>
+                  </p>
+                </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                  <p class="heading m-heading">25 MAR 2017</p>
+                  <p>
+                    <li>辦理本屆第 2 次會員大會暨第 3 次理監事聯席會。</li>
+                  </p>
+                </div>
+              </div>
+              <header class="timeline-header"><span class="tag is-large is-primary">2016</span></header>
+              <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                  <p class="heading m-heading">6 OCT 2016</p>
+                  <p>
+                    <li>辦理本屆第 2 次理監事聯席會。</li>
+                  </p>
+                </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                  <p class="heading m-heading">23 JUL 2016</p>
+                  <p>
+                    <li>辦理本屆會員成立大會暨第 1 次理監事聯席會，選出本屆理事長，由龔皇光校友當選理事長。</li>
+                  </p>
+                </div>
               </div>
             </div>
-            <div class="column is-half"><img class="image is-rounded" src="img/default_man.png" style="margin:auto;" width="400"></div>
           </div>
-        </div>
-      </div>
-    </section>
-    <section class="hero is-fullheight-with-navbar is-white" id="staff">
-      <div class="hero-body">
-        <div class="container">
-          <p class="title has-text-centered">工作團隊</p><img class="image" src="img/team.png" width="650" style="margin:auto;">
         </div>
       </div>
     </section>
